Fix vertical spacing button

--- a/_sass/0768_md/_block_md.scss
+++ b/_sass/0768_md/_block_md.scss
@@ -11,6 +11,9 @@
   .block-textonly {
     @include make-col(6); 
   }
+  .block-button {
+    margin: auto 0;
+  }
   .block-content {
     @include make-col(6);
     padding-top: 120px;
